package scatolesabbia;

/**
 * Rappresenta una direzione
 * Per indicare le scatole adiacenti
 *
 * @author Giacomo Orsenigo
 */
public enum Directions {
    SOPRA, SOTTO, DESTRA, SINISTRA, NONE;
}
